--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ body {
   width: 100vw;
   min-height: 100vh;
   overflow-x: hidden;
+  position: relative;
 }
 
 .first-cont {
@@ -60,12 +61,50 @@ body {
   margin: 0 auto;
 }
 
+.App::after{
+  position: absolute;
+  content:'';
+  width: 700px;
+  height: 700px;
+  right: -50px;
+  top: -50px;
+  background-image: url(./assets/images/bg-tablet-pattern.svg);
+  background-size:cover;
+  background-repeat:no-repeat ;
+  z-index: -1;
+}
+
+.App::before{
+  position: absolute;
+  content:'';
+  width: 700px;
+  height: 700px;
+  left: -350px;
+  top: 1000px;
+  background-image: url(./assets/images/bg-tablet-pattern.svg);
+  background-size:cover;
+  background-repeat:no-repeat ;
+  z-index: -1;
+}
+
+
 @media (max-width: 50em) {
+  
   .first-cont {
     width: 100%;
   }
 
   *::-webkit-scrollbar {
     display: none;
+  }
+  .App::after{
+    width: 400px;
+    height: 400px;
+  }
+  .App::before{
+    width: 400px;
+    height: 400px;
+    left: 50vw;
+    top: 400px;
   }
 }
